Change bg color of body- fix spacing

--- a/src/styles.css
+++ b/src/styles.css
@@ -21,6 +21,10 @@
     --formation-board-cell-bg-color-hovered-na: rgb(211, 107, 107);
 }
 
+body {
+    background-color: rgb(66, 72, 78);
+}
+
 .cell {
     background-color: var(--cell-bg-color);
     border: var(--cell-border);
@@ -33,10 +37,6 @@
 
 main {
     padding: 1.5em;
-}
-
-main:has(.formation-container) {
-    background-color: slategray;
 }
 
 .board {
@@ -138,7 +138,10 @@ ul.tips {
 }
 
 .tip {
+    color: white;
+    font-weight: 600;
     line-height: 1.3;
+    margin-bottom: 1.3em;
     max-width: 35ch;
 }
 
